# array_trait

./: Cargo.toml  README.md
src/: array.rs  array_2d_ops.rs  array_nd.rs  array_nd_ops.rs  array_ops.rs  as_array.rs  const_iter.rs  const_iter_mut.rs  const_iterator.rs  into_array.rs  into_const_iter.rs  lib.rs  nd_array.rs  padded.rs  partitioned_array.rs  prereq.rs  slice_ops.rs
src/ops/: mod.rs  mul_cross.rs
