[package]
name = "array_trait"
version = "0.6.10"
edition = "2021"
license = "MIT"
description = "A generic trait for any array"
repository = "https://github.com/sigurd4/array_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
float_approx_math = ["dep:float_approx_math"]

[dependencies]
moddef = "0.2.2"
float_approx_math = {version = "0.1.0", optional = true}