[package]
name = "array_trait"
version = "1.1.1"
edition = "2021"
license = "MIT"
keywords = ["array", "util", "trait"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "A generic trait for any array, with item as type and length as const parameter"
repository = "https://github.com/sigurd4/array_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["slice_trait/alloc"]

[dependencies]
moddef = "0.3.0"
slice_trait = "0.2.3"